
2003-12-04  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Have the telnet option responses use the 1xx
	responses to the com port control options.  I believe this is
	wrong, but it is consistent with other products already in the
	field.

2003-10-14  Corey Minyard <minyard@acm.org>

	* configure.in: Moved to version 2.0.

	* datafer.c, devcfg.c, devcfg.h, readconfig.c, utils.h: Added
	banner support.
	
	* ser2net.h, ser2net.conf: Added documentation for banner support.
	
	* dataxfer.c, telnet.c, telnet.h: Created a more generic telnet
	command handler and split it off from dataxfer.c

	* controller.c: Moved to the new telnet command handler.

	* dataxfer.c: Added watching the CD, RI, etc. lines.
	
2003-10-13  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Added a lot of the com port control handling.

2003-10-12  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Added real telnet option processing infrastructure,
	getting read for com port control handling.

2003-04-22  Corey Minyard <minyard@acm.org>

	* configure.in, ser2net.spec: Move to version 1.9.

	* selector.c: Turned off debugging code that accidentally got left
	on.

2003-02-14  Corey Minyard <minyard@acm.org>

	* configure.in, ser2net.spec: Move to version 1.8.

	* dataxfer.c: Do a tcflush(fd, TCOFLUSH) before closing the
	serial device, this avoids blocking on close.

2002-11-29  Corey Minyard <minyard@acm.org>

	* selector.c: More timer heap bugs.

2002-10-01  Corey Minyard <minyard@acm.org>

	* selector.c: Fixed bugs in the timer heaps.

2002-09-23  Corey Minyard <minyard@acm.org>

	* selector.c: Fixed a bug in the timer heaps.

2002-09-09  Corey Minyard <minyard@acm.org>

	* all: Reworked the selector code to make timers more general.

2002-07-24  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fixed a bug with handling config errors, when
	an error occurs in the wrong place it will segv.

2002-04-04  Corey Minyard <minyard@acm.org>

	* util.c: added the final return value to scan_tcp_port.
